@@ -33,5 +33,10 @@ extern void add_to_pathlist(const char *s, size_t len);
 extern void free_pathlist(void);
 
 extern void *safe_malloc(size_t count);
+#ifndef CANT_FREE_NULL
+#define safe_free free
+#else
+#define safe_free(_X) if((_X)) free((_X))
+#endif
 
 #endif /* TIMIDITY_COMMON_H */
